@@ -11,7 +11,7 @@ Version 2.18.1
 
   14143, 14155, 14547, 14699, 15532, 15427, 15522, 15680, 15723, 15734,
   15735, 15797, 15892, 15895, 15909, 15917, 15996, 16072, 16150, 16414,
-  16430.
+  16430, 16431.
 
 * Support for powerpc64le has been added.
 
