@@ -1,5 +1,12 @@
 2014-01-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	[BZ#16431]
+	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c (__gettimeofday):
+	Adjust the vDSO correctly for internal calls.
+	* sysdeps/unix/sysv/linux/powerpc/time.c (time): Likewise.
+
+2014-01-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	[BZ #16414]
 	* sysdeps/powerpc/powerpc64/fpu/s_truncl.S: Remove wrong
 	implementation.
